update font installation instruction

--- a/imisetest.tex
+++ b/imisetest.tex
@@ -23,7 +23,7 @@
 \frametitle{How to use this Template}
 \begin{enumerate}
 \item Clone or download the complete directory from \url{https://github.com/IMISE/imise-beamertheme}
-\item Get futura.ttc from the University of Leipzig Intranet and place it in the same directory.
+\item Download the "Futura Book" font from the intranet\footnote{\url{http://www.zv.uni-leipzig.de/intranet/rektorat/universitaetskommunikation/service/corporate-design/hausschrift-futura.html}} and install it
 \item Rename imisetest.tex, modify title, author and date.
 \item Fill with your presentation.
 \item Compile with xelatex.
