--- a/beamerthemeimise.sty
+++ b/beamerthemeimise.sty
@@ -70,7 +70,7 @@
 {\normalsize imise \hspace{-0.3em}\huge\color{orange}.}
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.8\paperwidth,ht=2.9ex,dp=1ex,colsep=0pt,center]{footer}%
-    \usebeamerfont{title in head/foot}\insertshorttitle---\insertshortauthor---\insertdate
+    \usebeamerfont{title in head/foot}\insertshorttitle---\insertshortauthor---\insertshortdate
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.1\paperwidth,ht=2.9ex,dp=1ex,colsep=0pt,right]{footer}%
     \usebeamerfont{title in head/foot}\insertframenumber{} %/ \inserttotalframenumber
